--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
    <div class="conteneur">
         <div class="tete">
-            <h1><img src="image/logo.png" alt=""></h1> 
+            <h1><img src="image/logo.jpg" alt=""></h1> 
             <div class="image">
                 <a href="https://web.facebook.com/ezechiel.punga"><img src="image/face.jpg" alt=""></a>
                 <a href="https://www.linkedin.com/in/ezechiel-punga-621126223"><img src="image/in.jpg" alt=""></a>
